[package]
name = "vr"
version = "0.1.0"
authors = ["Chase McCarthy <chase@code0100fun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io_bluetooth = "0.1"
rusb = "0.5"
libusb1-sys = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "setupapi", "usbiodef"
] }